[project]
name = "whc-bench"
version = "0.1.0"
description = "HTTP stress testing tool for IoT platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "aiokafka>=0.10.0",
    "pure-sasl>=0.6.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
